fix more incorrect data

--- a/data/episodes/general-conference/2022-april/gc-2022-04-04-01-jean-b-bingham-covenants-with-god-strengthen-protect-and-prepare-us-for-eternal-glory.yml
+++ b/data/episodes/general-conference/2022-april/gc-2022-04-04-01-jean-b-bingham-covenants-with-god-strengthen-protect-and-prepare-us-for-eternal-glory.yml
@@ -1,4 +1,4 @@
-id: gc-2022-04-04-01-bingham-covenants-with-god-strengthen-protect-and-prepare-us-for-eternal-glory
+id: gc-2022-04-04-01-jean-b-bingham-covenants-with-god-strengthen-protect-and-prepare-us-for-eternal-glory
 title: Covenants with God Strengthen, Protect, and Prepare Us for Eternal Glory
 date: 2022-04-01
 session: 4
@@ -6,7 +6,7 @@ sequence: 1
 links:
   mp3: https://assets.churchofjesuschrist.org/3e874962b30311eca14feeeeac1e300dc067925a-32k-en.mp3
 speaker:
-  id: bingham
+  id: jean-b-bingham
   title:
     full: Relief Society General President
     short: Jean B.
