--- a/data/episodes/general-conference/2024-april/gc-2024-04-03-03-andrea-muñoz-spannaus-faithful-to-the-end.yml
+++ b/data/episodes/general-conference/2024-april/gc-2024-04-03-03-andrea-muñoz-spannaus-faithful-to-the-end.yml
@@ -1,4 +1,4 @@
-id: gc-2024-04-03-03-andrea-mu-oz-spannaus-faithful-to-the-end
+id: gc-2024-04-03-03-andrea-muñoz-spannaus-faithful-to-the-end
 title: Faithful to the End
 date: 2024-04-01
 session: 3
@@ -6,7 +6,7 @@ sequence: 3
 links:
   mp3: https://assets.churchofjesuschrist.org/d277109df5b811eeb065eeeeac1e0c4ce66db2b1-32k-en.mp3
 speaker:
-  id: andrea-mu-oz-spannaus
+  id: andrea-muñoz-spannaus
   title:
     full: Second Counselor in the Young Women General Presidency
     short: Sister
