--- a/data/episodes/general-conference/2025-october/gc-2025-10-04-06-andrea-muñoz-spannaus-prophets-of-god.yml
+++ b/data/episodes/general-conference/2025-october/gc-2025-10-04-06-andrea-muñoz-spannaus-prophets-of-god.yml
@@ -1,4 +1,4 @@
-id: gc-2025-10-04-06-andrea-mu-oz-spannaus-prophets-of-god
+id: gc-2025-10-04-06-andrea-muñoz-spannaus-prophets-of-god
 title: Prophets of God
 date: 2025-10-04
 session: 4
@@ -6,7 +6,7 @@ sequence: 6
 links:
   mp3: https://assets.churchofjesuschrist.org/zq8979lo2ty683yrhrxxthq4h3vdr3t71dg2a3ct-128k-en.mp3
 speaker:
-  id: andrea-mu-oz-spannaus
+  id: andrea-muñoz-spannaus
   title:
     full: Second Counselor in the Young Women General Presidency
     short: Sister
