--- a/data/episodes/general-conference/2023-april/gc-2023-04-02-08-benjamín-de-hoyos-the-work-of-the-temple-and-family-history-one-and-the-same-work.yml
+++ b/data/episodes/general-conference/2023-april/gc-2023-04-02-08-benjamín-de-hoyos-the-work-of-the-temple-and-family-history-one-and-the-same-work.yml
@@ -1,12 +1,12 @@
-id: gc-2023-04-02-08-benjam-n-de-hoyos-the-work-of-the-temple-and-family-history-one-and-the-same-work
-title: The Work of the Temple and Family History—One and the Same Work
+id: gc-2023-04-02-08-benjamín-de-hoyos-the-work-of-the-temple-and-family-history-one-and-the-same-work
+title: The Work of the Temple and Family History — One and the Same Work
 date: 2023-04-01
 session: 2
 sequence: 8
 links:
   mp3: https://assets.churchofjesuschrist.org/2e94223dd1b111ed8f0beeeeac1eee9018e8ce5c-32k-en.mp3
 speaker:
-  id: benjam-n-de-hoyos
+  id: benjamín-de-hoyos
   title:
     full: Of the Seventy
     short: Elder
