fix more data integrity issues

--- a/data/episodes/general-conference/2022-april/gc-2022-04-03-03-rebecca-l-craven-do-what-mattereth-most.yml
+++ b/data/episodes/general-conference/2022-april/gc-2022-04-03-03-rebecca-l-craven-do-what-mattereth-most.yml
@@ -1,4 +1,4 @@
-id: gc-2022-04-03-03-l-craven-do-what-mattereth-most
+id: gc-2022-04-03-03-rebecca-l-craven-do-what-mattereth-most
 title: Do What Mattereth Most
 date: 2022-04-01
 session: 3
@@ -6,10 +6,10 @@ sequence: 3
 links:
   mp3: https://assets.churchofjesuschrist.org/5407893fb2fe11ec8a27eeeeac1eae13ed8d9b15-32k-en.mp3
 speaker:
-  id: l-craven
+  id: rebecca-l-craven
   title:
     full: Second Counselor in the Young Women General Presidency
-    short: Rebecca
+    short: Sister
 summary: As we center our lives on Jesus Christ, we will be blessed with
   spiritual strength, contentment, and joy.
 topics: []
