--- a/data/episodes/general-conference/2022-april/gc-2022-04-04-01-jean-b-bingham-covenants-with-god-strengthen-protect-and-prepare-us-for-eternal-glory.yml
+++ b/data/episodes/general-conference/2022-april/gc-2022-04-04-01-jean-b-bingham-covenants-with-god-strengthen-protect-and-prepare-us-for-eternal-glory.yml
@@ -9,7 +9,7 @@ speaker:
   id: jean-b-bingham
   title:
     full: Relief Society General President
-    short: Jean B.
+    short: Sister
 summary: As we choose to make covenants and keep them, we will be blessed with
   more happiness in this life and a glorious eternal life to come.
 topics: []
