--- a/data/episodes/general-conference/2022-april/gc-2022-04-05-02-amy-a-wright-christ-heals-that-which-is-broken.yml
+++ b/data/episodes/general-conference/2022-april/gc-2022-04-05-02-amy-a-wright-christ-heals-that-which-is-broken.yml
@@ -1,4 +1,4 @@
-id: gc-2022-04-05-02-wright-christ-heals-that-which-is-broken
+id: gc-2022-04-05-02-amy-a-wright-christ-heals-that-which-is-broken
 title: Christ Heals That Which Is Broken
 date: 2022-04-01
 session: 5
@@ -6,10 +6,10 @@ sequence: 2
 links:
   mp3: https://assets.churchofjesuschrist.org/4fd30547b3b311eca14feeeeac1e300da170505d-32k-en.mp3
 speaker:
-  id: wright
+  id: amy-a-wright
   title:
     full: Second Counselor in the Primary General Presidency
-    short: Amy A.
+    short: Sister
 summary: He can heal broken relationships with God, broken relationships with
   others, and broken parts of ourselves.
 topics: []
