--- a/data/episodes/general-conference/2023-october/gc-2023-10-05-03-valeri-v-cordón-divine-parenting-lessons.yml
+++ b/data/episodes/general-conference/2023-october/gc-2023-10-05-03-valeri-v-cordón-divine-parenting-lessons.yml
@@ -1,4 +1,4 @@
-id: gc-2023-10-05-03-valeri-v-cord-n-divine-parenting-lessons
+id: gc-2023-10-05-03-valeri-v-cordón-divine-parenting-lessons
 title: Divine Parenting Lessons
 date: 2023-10-01
 session: 5
@@ -6,7 +6,7 @@ sequence: 3
 links:
   mp3: https://assets.churchofjesuschrist.org/35754d8360d311eebe74eeeeac1e55d6227d41a6-32k-en.mp3
 speaker:
-  id: valeri-v-cord-n
+  id: valeri-v-cordón
   title:
     full: Of the Seventy
     short: Elder
