--- a/data/episodes/general-conference/2024-october/gc-2024-10-05-05-rubén-v-alliaud-sons-and-daughters-of-god.yml
+++ b/data/episodes/general-conference/2024-october/gc-2024-10-05-05-rubén-v-alliaud-sons-and-daughters-of-god.yml
@@ -1,4 +1,4 @@
-id: gc-2024-10-05-05-rub-n-v-alliaud-sons-and-daughters-of-god
+id: gc-2024-10-05-05-rubén-v-alliaud-sons-and-daughters-of-god
 title: Sons and Daughters of God
 date: 2024-10-01
 session: 5
@@ -6,7 +6,7 @@ sequence: 5
 links:
   mp3: https://assets.churchofjesuschrist.org/be61302b810311efae28022e7e432ed978b12d68-128k-en.mp3
 speaker:
-  id: rub-n-v-alliaud
+  id: rubén-v-alliaud
   title:
     full: Of the Seventy
     short: Elder
