--- a/data/episodes/general-conference/2025-april/gc-2025-04-01-07-ricardo-p-giménez-my-love-for-the-savior-is-my-why-.yml
+++ b/data/episodes/general-conference/2025-april/gc-2025-04-01-07-ricardo-p-giménez-my-love-for-the-savior-is-my-why-.yml
@@ -1,4 +1,4 @@
-id: gc-2025-04-01-07-ricardo-p-gim-nez-my-love-for-the-savior-is-my-why-
+id: gc-2025-04-01-07-ricardo-p-giménez-my-love-for-the-savior-is-my-why-
 title: My Love for the Savior Is My “Why”
 date: 2025-04-01
 session: 1
@@ -6,7 +6,7 @@ sequence: 7
 links:
   mp3: https://assets.churchofjesuschrist.org/7f6xhpd8lraheb37nx0k0s2im1eozdojrfixte14-128k-en.mp3
 speaker:
-  id: ricardo-p-gim-nez
+  id: ricardo-p-giménez
   title:
     full: Of the Seventy
     short: Elder
