--- a/data/episodes/general-conference/2022-april/gc-2022-04-06-04-mark-l-pace-conversion-is-our-goal.yml
+++ b/data/episodes/general-conference/2022-april/gc-2022-04-06-04-mark-l-pace-conversion-is-our-goal.yml
@@ -1,4 +1,4 @@
-id: gc-2022-04-06-04-pace-conversion-is-our-goal
+id: gc-2022-04-06-04-mark-l-pace-conversion-is-our-goal
 title: Conversion Is Our Goal
 date: 2022-04-01
 session: 6
@@ -6,10 +6,10 @@ sequence: 4
 links:
   mp3: https://assets.churchofjesuschrist.org/ab382098b3b411ec867aeeeeac1ee15d600f8fa1-32k-en.mp3
 speaker:
-  id: pace
+  id: mark-l-pace
   title:
     full: Sunday School General President
-    short: Mark L.
+    short: President
 summary: There is no substitute for the time you spend in the scriptures,
   hearing the Holy Ghost speak directly to you.
 topics: []
