--- a/package.json
+++ b/package.json
@@ -1,26 +1,68 @@
 {
-  "name": "gospel-rss",
+  "name": "gospel-metacasts",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "validate:yaml": "node scripts/validate.ts",
-    "build:conference": "node scripts/create-rss/general-conference.ts"
+    "build:conference": "node scripts/create-rss/general-conference.ts",
+    "ng": "ng",
+    "start": "ng serve",
+    "prebuild": "cp ./Readme.md public/",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test",
+    "serve:ssr:client": "node dist/client/server/server.mjs"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "prettier": {
+    "printWidth": 100,
+    "singleQuote": true,
+    "overrides": [
+      {
+        "files": "*.html",
+        "options": {
+          "parser": "angular"
+        }
+      }
+    ]
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/common": "^20.3.0",
+    "@angular/compiler": "^20.3.0",
+    "@angular/core": "^20.3.0",
+    "@angular/forms": "^20.3.0",
+    "@angular/platform-browser": "^20.3.0",
+    "@angular/platform-server": "^20.3.0",
+    "@angular/router": "^20.3.0",
+    "@angular/ssr": "^20.3.6",
+    "change-case": "^5.4.4",
+    "express": "^5.1.0",
+    "marked": "^16.4.1",
+    "ngx-markdown": "^20.1.0",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0"
+  },
   "devDependencies": {
+    "@angular/build": "^20.3.6",
+    "@angular/cli": "^20.3.6",
+    "@angular/compiler-cli": "^20.3.0",
+    "@types/express": "^5.0.1",
+    "@types/jasmine": "~5.1.0",
     "@types/node": "^24.7.2",
     "@types/xml2js": "^0.4.14",
-    "typescript": "^5.9.3",
+    "fs-extra": "^11.3.2",
+    "jasmine-core": "~5.9.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
+    "music-metadata": "^11.9.0",
+    "typescript": "~5.9.2",
     "xml2js": "^0.6.2",
     "xmlbuilder2": "^3.1.1",
     "yaml": "^2.8.1"
-  },
-  "dependencies": {
-    "fs-extra": "^11.3.2",
-    "music-metadata": "^11.9.0"
   }
 }
