--- a/angular.json
+++ b/angular.json
@@ -48,7 +48,8 @@
                   "maximumError": "8kB"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "baseHref": "https://joe.skeen.rocks/gospel-metacasts/"
             },
             "development": {
               "optimization": false,
