add some person photos

--- a/data/people/dallin-h-oaks.yml
+++ b/data/people/dallin-h-oaks.yml
@@ -1,2 +1,3 @@
 id: dallin-h-oaks
 name: Dallin H. Oaks
+photo: https://history.churchofjesuschrist.org/church-history-people/bc/Church%20Leadership/Dallin%20H%20Oaks/390x520/Oaks,Dallin_Profile.jpeg
