--- a/data/people/eldred-g-smith.yml
+++ b/data/people/eldred-g-smith.yml
@@ -1,2 +1,3 @@
 id: eldred-g-smith
 name: Eldred G. Smith
+photo: https://history.churchofjesuschrist.org/church-history-people/bc/missionaries/portraits/S/390x520/eldred-gee-smith-1907-fs.jpg
