--- a/data/people/thomas-s-monson.yml
+++ b/data/people/thomas-s-monson.yml
@@ -1,2 +1,3 @@
 id: thomas-s-monson
 name: Thomas S. Monson
+photo: https://history.churchofjesuschrist.org/chd/individual/thomas-s-monson-1927?lang=eng
