--- a/data/people/russell-m-nelson.yml
+++ b/data/people/russell-m-nelson.yml
@@ -1,2 +1,3 @@
 id: russell-m-nelson
 name: Russell M. Nelson
+photo: https://history.churchofjesuschrist.org/church-history-people/bc/Church%20Leadership/Russell%20M%20Nelson/390x520/Nelson,Russel%20M_Profile.jpeg
