fix President Benson photo

--- a/data/people/ezra-taft-benson.yml
+++ b/data/people/ezra-taft-benson.yml
@@ -1,4 +1,4 @@
 id: ezra-taft-benson
 name: Ezra Taft Benson
-website: https://history.churchofjesuschrist.org/chd/individual/ezra-taft-benson-1811?lang=eng
-photo: https://history.churchofjesuschrist.org/church-history-people/bc/Pioneer%20Photos/Company%20Captains/390x520/Benson_Ezra-T_PH%204427_f0002_i0011_00001.jpg
+website: https://history.churchofjesuschrist.org/chd/individual/ezra-taft-benson-1899?lang=eng
+photo: https://history.churchofjesuschrist.org/church-history-people/bc/Church%20Leadership/Ezra%20Taft%20Benson/390x520/Benson_Profile.jpeg
